--- a/0601_Assignment_트래블톡/0601_Assignment_트래블톡/Base.lproj/Main.storyboard
+++ b/0601_Assignment_트래블톡/0601_Assignment_트래블톡/Base.lproj/Main.storyboard
@@ -1,24 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xkA-2p-NT7">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Travel Talk View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TravelTalkViewController" id="BYZ-38-t0r" customClass="TravelTalkViewController" customModule="_601_Assignment___________" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="jQm-J4-Ftp">
+                                <rect key="frame" x="0.0" y="103" width="393" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="DMb-RB-vQ1"/>
+                                </connections>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aek-Ce-wQ8">
+                                <rect key="frame" x="0.0" y="159" width="393" height="659"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="XgZ-W6-13H">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="44.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XgZ-W6-13H" id="CUO-i6-9rR">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="44.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aek-Ce-wQ8" secondAttribute="bottom" id="COZ-oL-YIL"/>
+                            <constraint firstItem="jQm-J4-Ftp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="K4h-7M-6Y1"/>
+                            <constraint firstItem="aek-Ce-wQ8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Kuo-RF-DdB"/>
+                            <constraint firstItem="aek-Ce-wQ8" firstAttribute="top" secondItem="jQm-J4-Ftp" secondAttribute="bottom" id="Lt1-5r-hU8"/>
+                            <constraint firstItem="jQm-J4-Ftp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eg6-NK-8gj"/>
+                            <constraint firstItem="jQm-J4-Ftp" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gcU-93-VAx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aek-Ce-wQ8" secondAttribute="trailing" id="jRw-Ra-s8J"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="E0q-5M-UlV"/>
+                    <connections>
+                        <outlet property="searchBar" destination="jQm-J4-Ftp" id="cqA-qZ-kdc"/>
+                        <outlet property="tableView" destination="aek-Ce-wQ8" id="Wa6-je-krT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1982.4427480916029" y="-34.507042253521128"/>
+        </scene>
+        <!--Chatroom View Controller-->
+        <scene sceneID="Fqv-qT-I82">
+            <objects>
+                <viewController storyboardIdentifier="ChatroomViewController" id="JXd-ri-u4C" customClass="ChatroomViewController" customModule="_601_Assignment___________" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YUv-tO-Ndf">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="hmB-T1-Uai">
+                                <rect key="frame" x="0.0" y="59" width="393" height="671"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bRf-Q0-mWV">
+                                <rect key="frame" x="16" y="784" width="361" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ace-zw-dRl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bRf-Q0-mWV" firstAttribute="leading" secondItem="Ace-zw-dRl" secondAttribute="leading" constant="16" id="3tm-dC-lS4"/>
+                            <constraint firstItem="hmB-T1-Uai" firstAttribute="leading" secondItem="Ace-zw-dRl" secondAttribute="leading" id="66J-Pk-Z8d"/>
+                            <constraint firstItem="Ace-zw-dRl" firstAttribute="trailing" secondItem="hmB-T1-Uai" secondAttribute="trailing" id="9Ll-WJ-kRL"/>
+                            <constraint firstItem="bRf-Q0-mWV" firstAttribute="bottom" secondItem="Ace-zw-dRl" secondAttribute="bottom" id="C1X-5Y-3UV"/>
+                            <constraint firstItem="Ace-zw-dRl" firstAttribute="trailing" secondItem="bRf-Q0-mWV" secondAttribute="trailing" constant="16" id="Eq1-HI-0j7"/>
+                            <constraint firstItem="hmB-T1-Uai" firstAttribute="top" secondItem="Ace-zw-dRl" secondAttribute="top" id="wgZ-Wr-gR5"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="chatTableView" destination="hmB-T1-Uai" id="YCO-fg-VTE"/>
+                        <outlet property="chatTextField" destination="bRf-Q0-mWV" id="fYM-VU-D3S"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aPU-fT-Qs1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2846.5648854961833" y="-35.211267605633807"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="U0L-8R-AhP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xkA-2p-NT7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NkF-WQ-OYd">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="WDV-aO-aau"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gVZ-47-U54" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1055.7251908396945" y="-34.507042253521128"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
