--- a/0601_Assignment_트래블톡/0601_Assignment_트래블톡/chatroomUI/otherTableViewCell.xib
+++ b/0601_Assignment_트래블톡/0601_Assignment_트래블톡/chatroomUI/otherTableViewCell.xib
@@ -44,10 +44,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p9e-ye-1dV">
-                        <rect key="frame" x="64" y="8" width="100" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="100" id="EWz-h3-BYm"/>
-                        </constraints>
+                        <rect key="frame" x="64" y="8" width="41.333333333333343" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -65,6 +62,7 @@
                     <constraint firstItem="gHt-HN-Ajx" firstAttribute="leading" secondItem="g4g-dN-fNU" secondAttribute="trailing" constant="8" id="Dda-dw-cBi"/>
                     <constraint firstItem="g4g-dN-fNU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="HLR-0D-xxc"/>
                     <constraint firstItem="gHt-HN-Ajx" firstAttribute="top" secondItem="p9e-ye-1dV" secondAttribute="bottom" constant="8" id="JPC-dW-Yv8"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="p9e-ye-1dV" secondAttribute="trailing" constant="100" id="JdC-k8-ndq"/>
                     <constraint firstItem="oqZ-G9-HC9" firstAttribute="leading" secondItem="gHt-HN-Ajx" secondAttribute="trailing" constant="8" id="L0k-9b-fms"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="gHt-HN-Ajx" secondAttribute="bottom" constant="8" id="PGu-1l-kob"/>
                     <constraint firstItem="g4g-dN-fNU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="TRk-0z-ypA"/>
